# llm-interface-evaluation

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json
apps/embedding/: Dockerfile  pyproject.toml
apps/embedding/src/: embedder.py  main.py  metrics.py
apps/embedding/tests/: test_main.py
apps/eval/: package.json
apps/gateway/: Dockerfile  package.json  tsconfig.json
apps/gateway/src/: server.ts
apps/gateway/src/plugins/: auth.ts  postgres.ts  redis.ts
apps/gateway/src/routes/: admin.ts  health.ts  inference.ts
apps/gateway/src/services/: cache.ts  embedding-client.ts  logger.ts
apps/gateway/src/types/: index.ts
apps/workers/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
apps/workers/src/: index.ts  ollama-client.ts  test.ts
infra/loki/: loki.yml
infra/nginx/: nginx.conf
infra/postgres/migrations/: 001_initial_schema.sql  002_materialized_view.sql
infra/prometheus/: prometheus.yml
infra/promtail/: promtail.yml
scripts/: bench-embedding.sh  generate-ssl.sh  pull-models.sh  seed-eval-data.ts  test-embedding-similarity.sh  test-ollama.sh
